# ynab-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  server.py
